# cloud-seed-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/agents/: core-mcp-tools.md  infra-compose.md  policy-engine.md  sa-hierarchy.md  tool-forge.md
bootstrap/: deny_policy.tf  install.sh  main.tf  outputs.tf  providers.tf  sa_hierarchy.tf  variables.tf  vm-startup.sh
bootstrap/projects/: main.tf  outputs.tf  providers.tf  variables.tf
bootstrap/tests/: validate.sh
core-mcp/: Dockerfile  pyproject.toml
core-mcp/src/core_mcp/: __main__.py  config.py  server.py  tool_loader.py
core-mcp/src/core_mcp/tools/: _subprocess.py  cloudrun.py  database.py  github.py  infracost.py  project.py  terraform.py
core-mcp/tests/: conftest.py  test_cloudrun.py  test_database.py  test_github.py  test_health.py  test_infracost.py  test_project.py  test_subprocess.py  test_terraform.py  test_tool_loader.py
docs/: bootstrap-deep-dive.md  bootstrap-guide.md  terraform-come-funziona.md
playground/infracost/: README.md  providers.tf  scenario-database.tf  scenario-full-project.tf  scenario-vm-expensive.tf  scenario-vm.tf
policy-engine/: Dockerfile  opa-config.yaml
tool-forge/: Dockerfile  pyproject.toml
tool-forge/src/tool_forge/: __init__.py  __main__.py  generator.py  registry.py  sandbox.py  scanner.py  tester.py
tool-forge/src/tool_forge/templates/: test_template.py.jinja2  tool_template.py.jinja2
tool-forge/tests/: conftest.py  test_api.py  test_generator.py  test_registry.py  test_sandbox.py  test_scanner.py
(+23 files in other folders)
