[project]
name = "core-mcp"
version = "0.1.0"
description = "Cloud Seed MCP - Core MCP Server"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0,<2",
    "pydantic-settings>=2.5.2",
    "httpx>=0.27.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
