[project]
name = "tool-forge"
version = "0.1.0"
description = "Cloud Seed MCP - Tool Forge: generates, tests, scans, and promotes custom MCP tools"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "asyncpg>=0.30",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tool_forge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
